--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "es2015",
 		"module": "esnext",
-		"lib": ["dom", "esnext"],
+		"lib": ["dom", "es2015", "es2016", "es2017"],
 		"jsx": "react",
 		"declaration": true,
 		"declarationDir": "dist",
@@ -13,8 +13,14 @@
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"outDir": "dist",
-		"rootDir": "src"
+		"rootDir": "src",
+		"importHelpers": false
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", "dist", "**/*.test.tsx", "**/*.test.ts"]
+	"exclude": [
+		"node_modules",
+		"dist",
+		"**/*.test.tsx",
+		"**/*.test.ts"
+	]
 }
