--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-flow-workflow",
-	"version": "0.1.4",
+	"version": "0.5.0",
 	"description": "A powerful React hook for building interactive workflow diagrams with React Flow",
 	"type": "module",
 	"main": "dist/index.esm.js",
@@ -38,29 +38,33 @@
 	},
 	"homepage": "https://github.com/habbeunik/react-flow-workflow#readme",
 	"peerDependencies": {
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
-		"reactflow": "^11.0.0"
+		"react": ">=18.0.0",
+		"react-dom": ">=18.0.0",
+		"reactflow": ">=11.0.0"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^24.0.0",
+		"@rollup/plugin-commonjs": "^25.0.0",
 		"@rollup/plugin-node-resolve": "^15.0.0",
 		"@rollup/plugin-typescript": "^11.0.0",
 		"@testing-library/jest-dom": "^6.0.0",
 		"@testing-library/react": "^14.0.0",
 		"@types/dagre": "^0.7.52",
-		"@types/react": "^18.0.0",
-		"@types/react-dom": "^18.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
+		"@types/react": "^18.0.0 || ^19.0.0",
+		"@types/react-dom": "^18.0.0 || ^19.0.0",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.0.0",
 		"jest": "^29.0.0",
 		"rimraf": "^5.0.0",
-		"rollup": "^3.0.0",
-		"typescript": "^4.9.0"
+		"rollup": "^4.0.0",
+		"typescript": "^5.0.0"
 	},
 	"dependencies": {
 		"@dagrejs/dagre": "^1.1.4",
 		"dagrejs": "^0.2.1"
+	},
+	"engines": {
+		"node": ">=18.0.0",
+		"npm": ">=8.0.0"
 	}
 }
