--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,25 @@
 {
 	"compilerOptions": {
-		"target": "es2015",
-		"module": "esnext",
-		"lib": ["dom", "es2015", "es2016", "es2017"],
-		"jsx": "react",
+		"target": "ES2020",
+		"module": "ESNext",
+		"lib": ["DOM", "DOM.Iterable", "ES6"],
+		"jsx": "react-jsx",
 		"declaration": true,
 		"declarationDir": "dist",
 		"strict": true,
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"outDir": "dist",
 		"rootDir": "src",
-		"importHelpers": false
+		"importHelpers": false,
+		"allowImportingTsExtensions": false,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": false,
+		"incremental": true
 	},
 	"include": ["src"],
 	"exclude": [
