fix: ensure TypeScript declaration files are generated and included in package
- Add build:types script to generate declaration files
- Update build process to include TypeScript declarations
- Ensure all .d.ts files are properly generated in dist folder
- Fix TypeScript support for consuming projects

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"README.md"
 	],
 	"scripts": {
-		"build": "rollup -c",
+		"build": "rollup -c && npm run build:types",
+		"build:types": "tsc --declaration --declarationDir dist --outDir dist --emitDeclarationOnly",
 		"test": "jest",
 		"lint": "eslint src/**/*.{ts,tsx}",
 		"clean": "rimraf dist",
